Add debug option

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -32,4 +32,4 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
           curl -s https://scripts.scantist.com/staging/scantist-bom-detect.jar --output scantist-bom-detect.jar
-          java -jar scantist-bom-detect.jar
+          java -jar scantist-bom-detect.jar --debug
